--- a/client-app/src/Pages/CSS/IVRS.css
+++ b/client-app/src/Pages/CSS/IVRS.css
@@ -2,9 +2,9 @@
 .ivrs-container {
   width: 90%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: white;
   border-radius: 10px;
 }
 
@@ -33,7 +33,7 @@
 
 .leave-application-container h1 {
   text-align: center;
-  color: #333;
+  color: #141619;
   margin: 10px;
 }
 
@@ -48,20 +48,12 @@
 .leave-history-table td {
   padding: 12px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #56596c;
 }
 
 .leave-history-table th {
   background-color: #050A44;
   color: white;
-}
-
-.leave-history-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.leave-history-table tr:hover {
-  background-color: #ddd;
 }
 
 /* Apply button styling */
@@ -78,8 +70,7 @@
 }
 
 .apply-button:hover {
-  background-color: #050A44;
-  transform: scale(1.05);
+  transform: scale(1.2);
 }
 
 /* Form group styling */
@@ -91,7 +82,7 @@
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #333;
+  color: #141619;
 }
 
 .form-group input,
@@ -99,7 +90,7 @@
 .form-group textarea {
   width: 100%;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #56596c;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -154,5 +145,5 @@
 }
 
 .leave-history-table button:hover {
-  background-color: #1976D2;
+  transform: scale(1.1);
 }
